--- a/server/src/public/index.html
+++ b/server/src/public/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset=utf-8>
-  <meta name=viewport content="width=device-width,initial-scale=1">
-  <title>anypage</title>
-  <link href=./static/css/app.9b65403b643bc4e6ecdfd2a5c8721965.css rel=stylesheet>
-</head>
-
-<body>
-  <div id=app></div>
-  <script type=text/javascript src=./static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
-  <script type=text/javascript src=./static/js/vendor.50bddc629cc105a8f927.js></script>
-  <script type=text/javascript src=./static/js/app.fa62d0b3bd28a3b57894.js></script>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Any Page</title><link href=./assets/css/app.5748c0fc0d10c74d49958e39ce2b1d92.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./assets/js/manifest.58ac9368d03d11919398.js></script><script type=text/javascript src=./assets/js/vendor.50bddc629cc105a8f927.js></script><script type=text/javascript src=./assets/js/app.8eaf11b7bbea078424a4.js></script></body></html>
